tests/ui/fail/id_is_mandatory.rs
#[derive(sqlo::Sqlo)]
struct Bla {
    un: String,
}

fn main() {}
